--- a/templates/videoPermission.html
+++ b/templates/videoPermission.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="assets/css/style.css">
     <title></title>
   </head>
   <body>
-
-    <div class="">
-      <h3></h3>
-      <video id="video" width="640" height="480" autoplay></video>
-      <button id="snap">Snap Photo</button>
-      <canvas id="canvas" width="640" height="480"></canvas>
-    </div>
-
     <!-- scripts -->
     <script src="../assets/js/libs/jquery.min.js" type="text/javascript"></script>
     <script src="../assets/js/enroll.js" type="text/javascript"></script>
