--- a/templates/authUser.html
+++ b/templates/authUser.html
@@ -8,7 +8,7 @@
   <body>
 
     <div id="container">
-      <h4 id="imageCount"></h4>
+      <h4 id="message"></h4>
       <video id="video" width="320" height="240" autoplay></video>
       <button id="snap">Authenticate User</button>
       <canvas id="canvas" width="320" height="240" hidden=true></canvas>
